# book-sync

./: .env.example  .gitignore  README.md  flake.nix  justfile  pyproject.toml
.github/workflows/: flake-check.yaml
flake-parts/: nixos-modules.nix  packages.nix  partitions.nix
grist/: Books Tracker.grist  Books_Tracker.grist  README.md
nix/: nixos-module.nix  uv-workspace.nix
src/abs_sync/: config.py  main.py  state.py  sync.py  utils.py
src/abs_sync/audiobookshelf/: __init__.py  client.py  models.py
src/abs_sync/grist/: __init__.py  client.py  models.py
src/book_sync/: config.py  main.py  sync.py  utils.py
src/book_sync/audiobookshelf/: client.py  models.py
src/book_sync/grist/: client.py  models.py
