[project]
name = "abs-sync"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pygrister>=0.9.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "types-requests>=2.32.4.20260107",
]

[tool.ruff]
target-version = "py313"
line-length = 140

[tool.ruff.lint]
# Enable isort
extend-select = ["I"]
