[project]
name = "abs-sync"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pygrister>=0.9.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "types-requests>=2.32.4.20260107",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/abs_sync"]

[project.scripts]
abs-sync = "abs_sync.main:main"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
# Enable isort
extend-select = ["I"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"

[[tool.mypy.overrides]]
module = "pygrister.*"
ignore_missing_imports = true
